src/test/ui/traits/multidispatch-convert-ambig-dest.stderr
error[E0283]: type annotations needed
  --> $DIR/multidispatch-convert-ambig-dest.rs:26:5
   |
LL | fn test<T,U>(_: T, _: U)
   |    ---- required by a bound in this
LL | where T : Convert<U>
   |           ---------- required by this bound in `test`
...
LL |     test(22, std::default::Default::default());
   |     ^^^^ cannot infer type for type parameter `U` declared on the function `test`
   |
   = note: cannot satisfy `i32: Convert<_>`
help: consider specifying the type arguments in the function call
   |
LL |     test::<T, U>(22, std::default::Default::default());
   |         ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
